k8s/apps/portainer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: portainer
  labels:
    app: portainer
spec:
  selector:
    app: portainer
  ports:
  - name: http
    port: 9000
    targetPort: http
    protocol: TCP
  - name: https
    port: 9443
    targetPort: https
    protocol: TCP
  - name: edge
    port: 8000
    targetPort: edge
    protocol: TCP
  type: ClusterIP
