k8s/apps/portainer/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
  namespace: portainer
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`portainer.pane.run`)
    kind: Rule
    services:
    - name: portainer
      port: 9000
  tls:
    secretName: portainer-tls
